--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Cafeteria/.vs/Cafeteria/v15/Server/sqlite3/db.lock
+/.vs/Cafeteria/v15/Server/sqlite3/db.lock
